@@ -4660,6 +4660,102 @@ DerivedSources/WebCore/XLinkNames.cpp : $(WebCore)/dom/make_names.pl $(WebCore)/
 if ENABLE_WEB_AUDIO
 FEATURE_DEFINES += ENABLE_WEB_AUDIO=1
 webcore_cppflags += -DENABLE_WEB_AUDIO=1
+webcore_sources += \
+	Source/WebCore/webaudio/AudioBasicProcessorNode.cpp \
+	Source/WebCore/webaudio/AudioBasicProcessorNode.h \
+	Source/WebCore/webaudio/AudioBuffer.cpp \
+	Source/WebCore/webaudio/AudioBuffer.h \
+	Source/WebCore/webaudio/AudioBufferSourceNode.cpp \
+	Source/WebCore/webaudio/AudioBufferSourceNode.h \
+	Source/WebCore/webaudio/AudioChannelMerger.cpp \
+	Source/WebCore/webaudio/AudioChannelMerger.h \
+	Source/WebCore/webaudio/AudioChannelSplitter.cpp \
+	Source/WebCore/webaudio/AudioChannelSplitter.h \
+	Source/WebCore/webaudio/AudioContext.cpp \
+	Source/WebCore/webaudio/AudioContext.h \
+	Source/WebCore/webaudio/AudioDestinationNode.cpp \
+	Source/WebCore/webaudio/AudioDestinationNode.h \
+	Source/WebCore/webaudio/AudioGain.h \
+	Source/WebCore/webaudio/AudioGainNode.cpp \
+	Source/WebCore/webaudio/AudioGainNode.h \
+	Source/WebCore/webaudio/AudioListener.cpp \
+	Source/WebCore/webaudio/AudioListener.h \
+	Source/WebCore/webaudio/AudioNode.cpp \
+	Source/WebCore/webaudio/AudioNode.h \
+	Source/WebCore/webaudio/AudioNodeInput.cpp \
+	Source/WebCore/webaudio/AudioNodeInput.h \
+	Source/WebCore/webaudio/AudioNodeOutput.cpp \
+	Source/WebCore/webaudio/AudioNodeOutput.h \
+	Source/WebCore/webaudio/AudioPannerNode.cpp \
+	Source/WebCore/webaudio/AudioPannerNode.h \
+	Source/WebCore/webaudio/AudioParam.cpp \
+	Source/WebCore/webaudio/AudioParam.h \
+	Source/WebCore/webaudio/AudioProcessingEvent.cpp \
+	Source/WebCore/webaudio/AudioProcessingEvent.h \
+	Source/WebCore/webaudio/AudioSourceNode.h \
+	Source/WebCore/webaudio/BiquadDSPKernel.cpp \
+	Source/WebCore/webaudio/BiquadDSPKernel.h \
+	Source/WebCore/webaudio/BiquadProcessor.cpp \
+	Source/WebCore/webaudio/BiquadProcessor.h \
+	Source/WebCore/webaudio/ConvolverNode.cpp \
+	Source/WebCore/webaudio/ConvolverNode.h \
+	Source/WebCore/webaudio/DelayDSPKernel.cpp \
+	Source/WebCore/webaudio/DelayDSPKernel.h \
+	Source/WebCore/webaudio/DelayNode.cpp \
+	Source/WebCore/webaudio/DelayNode.h \
+	Source/WebCore/webaudio/DelayProcessor.cpp \
+	Source/WebCore/webaudio/DelayProcessor.h \
+	Source/WebCore/webaudio/HighPass2FilterNode.cpp \
+	Source/WebCore/webaudio/HighPass2FilterNode.h \
+	Source/WebCore/webaudio/JavaScriptAudioNode.cpp \
+	Source/WebCore/webaudio/JavaScriptAudioNode.h \
+	Source/WebCore/webaudio/LowPass2FilterNode.cpp \
+	Source/WebCore/webaudio/LowPass2FilterNode.h \
+	Source/WebCore/webaudio/RealtimeAnalyser.cpp \
+	Source/WebCore/webaudio/RealtimeAnalyser.h \
+	Source/WebCore/webaudio/RealtimeAnalyserNode.cpp \
+	Source/WebCore/webaudio/RealtimeAnalyserNode.h
+webcore_built_sources += \
+	DerivedSources/WebCore/JSAudioBuffer.cpp \
+	DerivedSources/WebCore/JSAudioBuffer.h \
+	DerivedSources/WebCore/JSAudioBufferSourceNode.cpp \
+	DerivedSources/WebCore/JSAudioBufferSourceNode.h \
+	DerivedSources/WebCore/JSAudioChannelMerger.cpp \
+	DerivedSources/WebCore/JSAudioChannelMerger.h \
+	DerivedSources/WebCore/JSAudioChannelSplitter.cpp \
+	DerivedSources/WebCore/JSAudioChannelSplitter.h \
+	DerivedSources/WebCore/JSAudioContext.cpp \
+	DerivedSources/WebCore/JSAudioContext.h \
+	DerivedSources/WebCore/JSAudioDestinationNode.cpp \
+	DerivedSources/WebCore/JSAudioDestinationNode.h \
+	DerivedSources/WebCore/JSAudioGain.cpp \
+	DerivedSources/WebCore/JSAudioGain.h \
+	DerivedSources/WebCore/JSAudioGainNode.cpp \
+	DerivedSources/WebCore/JSAudioGainNode.h \
+	DerivedSources/WebCore/JSAudioListener.cpp \
+	DerivedSources/WebCore/JSAudioListener.h \
+	DerivedSources/WebCore/JSAudioNode.cpp \
+	DerivedSources/WebCore/JSAudioNode.h \
+	DerivedSources/WebCore/JSAudioPannerNode.cpp \
+	DerivedSources/WebCore/JSAudioPannerNode.h \
+	DerivedSources/WebCore/JSAudioParam.cpp \
+	DerivedSources/WebCore/JSAudioParam.h \
+	DerivedSources/WebCore/JSAudioProcessingEvent.cpp \
+	DerivedSources/WebCore/JSAudioProcessingEvent.h \
+	DerivedSources/WebCore/JSAudioSourceNode.cpp \
+	DerivedSources/WebCore/JSAudioSourceNode.h \
+	DerivedSources/WebCore/JSConvolverNode.cpp \
+	DerivedSources/WebCore/JSConvolverNode.h \
+	DerivedSources/WebCore/JSDelayNode.cpp \
+	DerivedSources/WebCore/JSDelayNode.h \
+	DerivedSources/WebCore/JSHighPass2FilterNode.cpp \
+	DerivedSources/WebCore/JSHighPass2FilterNode.h \
+	DerivedSources/WebCore/JSJavaScriptAudioNode.cpp \
+	DerivedSources/WebCore/JSJavaScriptAudioNode.h \
+	DerivedSources/WebCore/JSLowPass2FilterNode.cpp \
+	DerivedSources/WebCore/JSLowPass2FilterNode.h \
+	DerivedSources/WebCore/JSRealtimeAnalyserNode.cpp \
+	DerivedSources/WebCore/JSRealtimeAnalyserNode.h
 endif
 
 # ----
