@@ -1,3 +1,13 @@
+2011-01-28  Martin Robinson  <mrobinson@igalia.com>
+
+        [GTK] AudioProcessingEvent.h and JSJavaScriptAudioNode.h: No such file or directory
+        https://bugs.webkit.org/show_bug.cgi?id=52889
+
+        Build fix for WebAudio. Include WebAudio source files on the source
+        list when WebAudio is enabled.
+
+        * GNUmakefile.am: Include missing source files.
+
 2011-01-28  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Maciej Stachowiak.
